<resources>
    <string name="app_name">Wanderlog</string>
    <string name="back" />
    <string name="nose">TODO</string>
    <string name="img">TODO</string>
    <string name="view">TODO</string>
    <string name="but">TODO</string>
    <string name="mmm">TODO</string>
    <string name="todo">TODO</string>
    <string name="backallow">TODO</string>
    <string name="empty_state_image">Empty state image</string>
    <string name="empty_state_title">See everything you saved</string>
    <string name="empty_state_description">Your packages will be stored here!</string>
    <string name="title">See everything you saved</string>
    <string name="description">Your packages will be stored here!</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_firstname">First Name</string>
    <string name="header1">Manage your personal information</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="saved">Saved</string>
    <string name="packages">Packages</string>
    <string name="destinations">Popular destination</string>
    <string name="hotel">Hotel</string>
    <string name="flights">Flights</string>
    <string name="restaurants">Restaurants</string>
    <string name="attractions">Attractions</string>
    <string name="attractions_icon">Attractions Icon</string>
    <string name="flights_icon">Flights Icon</string>
    <string name="hotel_icon">Hotel Icon</string>
    <string name="restaurants_icon">Restaurants Icon</string>
    <string name="detaildescription">EF Tours\n5 days, 4 nights\nCusco, Peru</string>
    <string name="price">$350 per traveler</string>
    <string name="packagetitle">Students adventure in Cusco</string>
    <string name="samplepassword">***********</string>
    <string name="sampleemail">u202114545@upc.edu.pe</string>
    <string name="sampledate">05/12/03</string>
    <string name="samplegender">Male</string>
    <string name="samplelastname">Cortés</string>
    <string name="samplename">Joaquín</string>
    <string name="Title1">Cusco\'s adventure</string>
    <string name="text1">Cusco, Perú</string>
    <string name="description1">5 days\nLATAM Airlines\nHotel Palacio del Inka</string>
    <string name="price1">$350 per traveler</string>
    <string name="button1">Details</string>
    <string name="title2">Discover Arequipa</string>
    <string name="location2">Arequipa, Perú</string>
    <string name="details2">4 days\n Sky Airlines\nCasa Andina</string>
    <string name="price2">$300 per traveler</string>
    <string name="button2">Details</string>
    <string name="destination">Destination</string>
    <string name="date_2">Date 2</string>
    <string name="date_1">Date 1</string>
    <string name="search">Search</string>
    <string name="travelers">Travelers</string>
    <string name="origin">Origin</string>
    <string name="booking_communication">Booking Communication</string>
    <string name="password">password</string>
    <string name="username_of_email_address">username of email address</string>
    <string name="don_t_have_an_account">Don´t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="continue_with_username_email">Continue with username/email</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="logoDescription">Main Wanderlog Logo</string>
    <string name="i_have_account">I have account</string>
    <string name="sign_ina">Sign In</string>
    <string name="organization_name">Organization Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="restaurant">Restaurants</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="view_16">view16</string>
    <string name="view15">View15</string>
    <string name="view2">View2</string>
    <string name="view2_1">View2.1</string>
    <string name="attractionss">Attractions</string>
    <string name="add_to_plans">Add to Plan</string>
    <string name="usuario_1">Usuario #1</string>
    <string name="usuario_4">Usuario #4</string>
    <string name="restaurantss">Restaurants</string>
    <string-array name="order_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="todoo">TODO</string>
</resources>