<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="412dp"
        android:layout_height="204dp"
        android:background="#084DA6"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">

        <ImageView
            android:id="@+id/toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/view"
            android:src="@drawable/perfiluser"
            app:srcCompat="@drawable/perfiluser"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="32dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/myToolbar"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header1"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:inputType="textPersonName"
                android:text="@string/samplename"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                android:text="@string/samplelastname"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_gender"
                android:inputType="text"
                android:text="@string/samplegender"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:text="@string/sampledate"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@string/sampleemail"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@string/samplepassword"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/footerButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/img"
            android:src="@drawable/iconexplore2" />

        <ImageButton
            android:id="@+id/footerButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/mmm"
            android:src="@drawable/iconsaved" />

        <ImageButton
            android:id="@+id/footerButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconprofile" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
