<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favorites">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#084DA6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/saved"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="18dp"
            tools:ignore="RtlHardcoded" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/favoritesContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/myToolbar"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/myToolbar"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/emptyStateImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/emptysavedimage"
            android:contentDescription="@string/empty_state_image" />

        <TextView
            android:id="@+id/emptyStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/emptyStateDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/footerButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/img"
            android:src="@drawable/iconexplore2" />

        <ImageButton
            android:id="@+id/footerButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/mmm"
            android:src="@drawable/iconsaved" />

        <ImageButton
            android:id="@+id/footerButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconprofile" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>